Fixed bg-image size on mobile

--- a/app/blocks/service/service.styl
+++ b/app/blocks/service/service.styl
@@ -10,10 +10,11 @@
 	&__img
 		width 100%
 		height auto
+		min-height 25.875rem
 	
 	&__body
 		position relative
-		min-height 18.75rem
+		min-height 18.95rem
 		
 		z-index 10
 		padding 40px 0 35px 20px
@@ -39,7 +40,7 @@
 		
 	&__text
 		margin-bottom 12px
-		padding-right 1rem
+		padding-right .5rem
 		font-size 16px
 		line-height 1.5
 	
